Site/media/less/adm/sobipro.less
/* ... */
.spEditImage label {
	margin: 5px;
	float: none;
	display: inline;
	color: #808080;
}

.spEditImage img {
	border-radius: 5px 5px 5px 5px;
}

#SPAdminForm div.spFilterModal .control-label {
	padding-top: 0;
	width: 100px;
	float: left;
	clear: left;
}

#SPAdminForm div.spFilterModal .controls {
	margin-left: 120px;
}

#SPAdminForm .nav-tabs a {
	/*
	color: @font-a; !*#0088cc;*!
	text-decoration: none;
	*/
}

#SPAdminForm .nav-tabs a:hover {
	//color: @font-a-hover; /*#005580;*/
}

.SobiPro .input-prepend .alert,
.SobiPro .input-append .alert {
	//font-size: 14px;
}

.SobiPro .btn-danger,
.SobiPro .btn-sobipro {
	color: #ffffff;
	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
	background-color: #a90000;
	*background-color: #890000;
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#a90000), to(#890000));
	background-image: -webkit-linear-gradient(top, #a90000, #890000);
	background-image: -o-linear-gradient(top, #a90000, #890000);
	background-image: linear-gradient(to bottom, #a90000, #890000);
	background-image: -moz-linear-gradient(top, #a90000, #890000);
	background-repeat: repeat-x;
	border-color: #a90000 #a90000 #890000;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
	border-bottom-color: #a2a2a2;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffa90000', endColorstr='#ff890000', GradientType=0);
	filter: progid:dximagetransform.microsoft.gradient(enabled=false);
	*zoom: 1;
	-webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
	-moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
}

.SobiPro .btn-sobipro:hover,
.SobiPro .btn-sobipro:active,
.SobiPro .btn-sobipro.active,
.SobiPro .btn-sobipro.disabled,
.SobiPro .btn-sobipro[disabled] {
	color: #e4e4e4;
	background-color: #890000;
	*background-color: #890000;
}

.SobiPro .btn-sobipro:active,
.SobiPro .btn-sobipro.active {
	background-color: #003399 \9;
}

.SobiPro .btn-group.open .btn-sobipro.dropdown-toggle {
	background-color: @font-sobipro;
}

.SobiPro .btn-sobipro .caret {
	border-top-color: #ffffff;
	border-bottom-color: #ffffff;
}

.SobiPro .btn-danger:hover,
.SobiPro .btn-danger:active,
.SobiPro .btn-danger.active,
.SobiPro .btn-danger.disabled,
.SobiPro .btn-danger[disabled] {
	background-color: @font-sobipro;
}

.SobiPro .spCcMethod .form-horizontal {
	margin-bottom: 0;
}

#selectedCatPath {
	color: #808080;
}


.SobiPro .spOutput {
	margin-top: 4px;
	line-height: 22px;

	.badge {
		min-width: 20px;
		text-align: center;
	}

	i {
		font-size: 140%;
		text-decoration: none;
	}

	.infoText {
		color: #909090;
		background-color: #eeeeee;
		border-radius: 3px;
		border: 1px solid #dddddd;
		display: inline-block;
		min-height: 18px;
		padding: 2px 5px 2px;
		min-width: 140px;
		text-align: center;
		a,
		a:hover {
			color: #6699ff;
		}
	}
}

//Application Manager
.SobiPro .SpApps {
	.icon-check {
		color: green;
	}
	.icon-bell-alt {
		color: orange;
	}
	.icon-cloud-download {
		color: #0480BE;
	}
	.SpRemoveRepo,
	.SpExtInstall {
		//	float: left;
		padding: 2px 12px;
		min-width: 120px;
	}
	.SpCloudInstall {
		//	width: 13%;
		.progress {
			margin: 3px 0;
			width: 146px;
		}
	}
	.SPPbarMessage {
		padding: 10px;
	}
	.SPPbarMessage a{
		font-weight: bold;
		color: #333;
		text-decoration: underline;
	}
	.modal-body .label {
		margin-left: 10px;
		min-width: 80px;
	}
}

.SobiPro .SpCertificate .form-horizontal .control-group {
	margin-bottom: 0;
}

.SobiPro .invalid,
.SobiPro .invalid a {
	color: red;
	font-weight: normal;
	text-decoration: line-through;
}

.SobiPro .SpSmallCol {
	width: 5%;
}

.SobiPro .smallmessage {
	padding-top: 3px;
	padding-bottom: 3px;
	margin-bottom: 5px;
}

.SobiPro .tooltip-inner {
	color: #ffffff;
	text-align: center;
	background-color: #000066;
}

.SobiPro .SpExtName {
	.tooltip-inner {
		text-align: left;
		min-width: 350px;
		color: #202020;
		background-color: #eeeeee;
	}
	.tooltip.in {
		opacity: 0.9;
		filter: alpha(opacity=90);
	}
}

.SobiPro {
	.tooltip.top .tooltip-arrow {
		border-top-color: #000066;
	}
	.tooltip.right .tooltip-arrow {
		border-right-color: #000066;
	}
	.tooltip.left .tooltip-arrow {
		border-left-color: #000066;
	}
	.tooltip.bottom .tooltip-arrow {
		border-bottom-color: #000066;
	}
}

.SobiPro .spStatusIssues {
	float: right;
}

.SobiPro .spStatusHeader {
	font-size: 17px;
	//padding-top: 6px;
}

.SobiPro .spStatus {
	box-shadow: none;
	background-color: white;
	border: none;
	padding: 0 0 15px 0;
}

.SobiPro .spPanelSobiPro {
	//font-size: 14px;
}

.SobiPro .spText {
	margin-top: 16px;
}

.SobiPro .spVersions {
	font-size: 13px;
	margin-top: 10px;
}

.SobiPro .spCredits,
.SobiPro .spLicense,
.SobiPro .spNews {
	font-size: 13px;
}

.SobiPro .SpCellNewsTitle a {
	font-size: 16px;
	color: #555555;
}

.SobiPro .SpCellNewsTitle {
	padding-left: 10px;
}

.SobiPro .SpCellNewsContent {
	padding-top: 5px;
	padding-left: 10px;
}

.SobiPro .spNews .SpCellContainer {
	background-color: #f7f7f7;
	border: 1px solid #dcdcdc;
	color: #808080;
	border-radius: 4px;
	margin-bottom: 10px;
	min-height: 90px;
	padding: 5px;
	overflow: hidden;
	img {
		padding-right: 10px;
	}
}
.SpCellNewsImage {
	float: left;
}

.SobiPro td.SpCellIssueMsg {
	padding-top: 11px;
}

.SobiPro .spUpdatesApp {
	width: 55%;
	float: left;
}

//less round corners, to have a fresh insight
.SobiPro {
	.spStatus,
	.accordion-group {
		border-radius: 0;
	}
}
/* ... */

